Setup Inicial - Lorem Ipsum

--- a/tex/agradecimentos.tex
+++ b/tex/agradecimentos.tex
@@ -1,3 +1,1 @@
-Nos \emph{agradecimentos}, o autor se dirige a pessoas ou instituições que
-contribuíram para elaboração do trabalho apresentado. Por exemplo: \emph{Agradeço aos gigantes cujos
-ombros me permitiram enxergar mais longe. E a Google e Wikipédia.}
+Donec pellentesque, libero eu fermentum posuere, odio sapien blandit lacus, non tincidunt nibh mi id ante. Donec ac ligula sed eros condimentum dapibus molestie ultricies dui. Vestibulum nec luctus urna, ac finibus diam. Vivamus sapien lacus, pulvinar vel turpis sit amet, faucibus efficitur libero. Aliquam non nibh feugiat, luctus eros ac, pulvinar enim. Vestibulum a sem ac lacus tincidunt luctus. Ut dapibus, metus et consectetur venenatis, felis arcu ullamcorper neque, ultrices euismod nunc nibh in lectus. Suspendisse sem eros, lobortis ac tellus molestie, vestibulum rutrum mauris. Nunc congue pharetra erat. Mauris mi augue, euismod ut facilisis quis, rhoncus in velit. Vestibulum finibus tempus pulvinar. Mauris sodales sed urna vitae mattis.
