--- a/tex/dedicatoria.tex
+++ b/tex/dedicatoria.tex
@@ -1,3 +1,1 @@
-Na \emph{dedicatória} o autor presta homenagem a alguma pessoa (ou grupo de pessoas)
-que têm significado especial na vida pessoal ou profissional. Por exemplo (e citando o poeta):
-\emph{Eu dedico essa música a primeira garota que tá sentada ali na fila. Brigado!}
+Vivamus nec pulvinar libero. Nullam quam arcu, scelerisque eu dictum vitae, dignissim ac urna. Sed suscipit id mi ut vulputate. Nam eros risus, convallis nec sem nec, cursus venenatis tortor. Quisque interdum ultrices convallis. Proin pellentesque placerat ante sit amet iaculis. Sed sit amet lectus quam. Curabitur sit amet dapibus elit, vel fringilla felis. Curabitur aliquam augue ac tempus dapibus. Ut interdum a justo ut efficitur.
