--- a/tex/siglas.tex
+++ b/tex/siglas.tex
@@ -1,7 +1,17 @@
 % Não é necessário ordenar as siglas
 \sigla{UnB}{Universidade de Brasília}%
-\sigla{BCE}{Biblioteca Central}%
 \sigla{CIC}{Departamento de Ciência da Computação}%
-\sigla{CTAN}{Comprehensive \TeX\ Archive Network}%
-\sigla{CEP}{Comissão de Ética Pública}%
-\sigla{CAPES}{Coordenação de Aperfeiçoamento de Pessoal de Nível Superior}%
+\sigla{ASM}{\emph{Aproximate String Matching}}%
+\sigla{GPU}{\emph{Graphics Processing Unit}}
+\sigla{CUDA}{\emph{Compute Unified Device Architecture}}
+\sigla{GPGPU}{\emph{General-purpose Computing on Graphics Processing Units}}
+\sigla{SP}{\emph{Streaming Processor}}
+\sigla{SM}{\emph{Streaming Multiprocessor}}
+\sigla{MP}{\emph{Multiprocessor}}
+\sigla{DMM}{\emph{Discrete Memory Machine}}
+\sigla{UMM}{\emph{Unified Memory Machine}}
+\sigla{HMM}{\emph{Hierarchical Memory Machine}}
+\sigla{MMU}{\emph{Memory Management Unit}}
+\sigla{CTM}{\emph{Close to Metal}}
+\sigla{CC}{\emph{Compute Capability}}
+\sigla{CPU}{\emph{Central Processing Unit}}
