--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -1,10 +1,3 @@
-O \emph{abstract} é o resumo feito na língua Inglesa. Embora o conteúdo apresentado
-deva ser o mesmo, este texto não deve ser a tradução literal de cada palavra ou
-frase do resumo, muito menos feito em um tradutor automático. É uma língua
-diferente e o texto deveria ser escrito de acordo com suas nuances (aproveite para ler
-\url{http://dx.doi.org/10.6061%2Fclinics%2F2014(03)01}). Por exemplo: \emph{This work presents useful information on how to create a scientific text to describe
-and provide examples of how to use the Computer Science Department's \LaTeX\ class. The \unbcic\
-class defines a standard format for texts, simplifying the process of generating
-CIC documents and enabling authors to focus only on content. The standard was approved
-by the Department's professors and used to create this document. Future work includes
-continued support for the class and improvements on the explanatory text.}
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent placerat sollicitudin neque nec vehicula. Nam nec cursus ipsum. Pellentesque finibus urna vel metus egestas, eget sagittis nibh aliquet. Nulla auctor lacus a eleifend blandit. Phasellus finibus risus ac sem venenatis hendrerit. Donec ut mattis dolor, sed aliquet urna. Integer nunc orci, feugiat at mi nec, facilisis luctus neque. Suspendisse potenti. Pellentesque diam ante, vestibulum nec risus at, hendrerit fringilla urna. Aliquam suscipit tempus elit, in tincidunt nulla tincidunt sed.
+
+In aliquet commodo iaculis. Aenean sollicitudin odio et turpis auctor suscipit. Maecenas finibus turpis felis, a ornare lorem posuere sit amet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed tempor dignissim risus nec elementum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut euismod nisl at neque elementum, at imperdiet diam faucibus. Praesent a est sem. Fusce suscipit tellus id pulvinar ullamcorper. Nullam a felis et nibh dignissim tempor at quis tortor. Vestibulum vestibulum molestie pellentesque. Phasellus ac laoreet magna. Etiam est metus, consequat at pretium sit amet, auctor sit amet nulla. Nullam ligula odio, porttitor et eros id, finibus vestibulum orci.
