--- a/tex/resumo.tex
+++ b/tex/resumo.tex
@@ -1,16 +1,1 @@
-O \emph{resumo} é um texto inaugural para quem quer conhecer o trabalho, deve conter
-uma breve descrição de todo o trabalho (apenas um parágrafo). Portanto, só deve
-ser escrito após o texto estar pronto. Não é uma coletânea de frases recortadas
-do trabalho, mas uma apresentação concisa dos pontos relevantes, de modo que o
-leitor tenha uma ideia completa do que lhe espera. Uma sugestão é que seja composto
-por quatro pontos: 1) o que está sendo proposto, 2) qual o mérito da proposta, 3)
-como a proposta foi avaliada/validada, 4) quais as possibilidades para trabalhos
-futuros. É seguido de (geralmente) três palavras-chave que devem indicar claramente a que se
-refere o seu trabalho. Por exemplo: \emph{Este trabalho apresenta informações úteis a produção de trabalhos
-científicos para descrever e exemplificar como utilizar a classe \LaTeX\ do
-Departamento de Ciência da Computação da Universidade de Brasília para gerar
-documentos. A classe \unbcic\ define um padrão de formato para textos do CIC, facilitando a
-geração de textos e permitindo que os autores foquem apenas no conteúdo. O formato
-foi aprovado pelos professores do Departamento e utilizado para gerar este documento.
-Melhorias futuras incluem manutenção contínua da classe e aprimoramento do texto
-explicativo.}
+Donec pellentesque, libero eu fermentum posuere, odio sapien blandit lacus, non tincidunt nibh mi id ante. Donec ac ligula sed eros condimentum dapibus molestie ultricies dui. Vestibulum nec luctus urna, ac finibus diam. Vivamus sapien lacus, pulvinar vel turpis sit amet, faucibus efficitur libero. Aliquam non nibh feugiat, luctus eros ac, pulvinar enim. Vestibulum a sem ac lacus tincidunt luctus. Ut dapibus, metus et consectetur venenatis, felis arcu ullamcorper neque, ultrices euismod nunc nibh in lectus. Suspendisse sem eros, lobortis ac tellus molestie, vestibulum rutrum mauris. Nunc congue pharetra erat. Mauris mi augue, euismod ut facilisis quis, rhoncus in velit. Vestibulum finibus tempus pulvinar. Mauris sodales sed urna vitae mattis.
