--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,85 +1,80 @@
-@article{Biolchini_2005_Systematicreviewin,
-  author = {Jorge Biolchini and P. Gomes Mian and A. Candida Cruz Natali and G. Horta Travassos},
-  title = {Systematic review in software engineering},
-  journal = {System Engineering and Computer Science Department COPPE/UFRJ, Technical
-  Report ES},
-  year = {2005},
-  volume = {679},
-  number = {05}
-},
-
-@article{greenwade93,
-    author  = "George D. Greenwade",
-    title   = "The {C}omprehensive {T}ex {A}rchive {N}etwork ({CTAN})",
-    year    = "1993",
-    journal = "TUGBoat",
-    volume  = "14",
-    number  = "3",
-    pages   = "342--351"
-},
-
-@book{Knuth_1986_texbook,
-  title = {The texbook},
-  publisher = {Addison-Wesley Reading, MA, USA},
-  year = {1986},
-  author = {Knuth, Donald Ervin and Bibby, Duane},
-  volume = {1993}
-},
-
-@book{lamport_latex:_1994,
-  address = {Reading, Mass.},
-  title = {{LATEX}: a document preparation system : user's guide and reference manual},
-  isbn = {0201529831 9780201529838},
-  shorttitle = {{LATEX}},
-  publisher = {Addison-Wesley Pub. Co.},
-  author = {Lamport, Leslie},
-  year = {1994}
+@inbook{AIS2014,
+  author = {Aickelin, Uwe and Dasgupta, Dipankar and Gu, Feng},
+  year = {2014},
+  month = {01},
+  pages = {187-212},
+  title = {Artificial immune systems},
+  doi = {10.1007/978-1-4614-6940-7_7}
 }
 
-@book{newton1833philosophiae,
-  title={Philosophiae naturalis principia mathematica},
-  author={Newton, Isaac and Bernoulli, Daniel and MacLaurin, Colin and Euler, Leonhard},
-  volume={1},
-  year={1833},
-  publisher={excudit G. Brookman; impensis TT et J. Tegg, Londini}
-},
+@article{ICBook2009,
+  author = {Dasgupta, Dipankar and Nino, Luis Fernando},
+  year = {2009},
+  month = {04},
+  pages = {140-140},
+  title = {Immunological Computation: Theory and Application},
+  volume = {29},
+  isbn = {9780429134838},
+  journal = {Ingeniería e Investigación},
+  doi = {10.1201/9781420065466}
+}
 
-@MISC{Oetiker_1995_notsoshort,
-  author = {Oetiker, Tobias and Partl, Hubert and Hyna, Irene and Schlegl, Elisabeth},
-  title = {The not so short introduction to LATEX2$\varepsilon$},
-  year = {1995},
-  file = {Oetiker_1995_notsoshort.pdf:Oetiker_1995_notsoshort.pdf:PDF}
-},
+@article{EvaluateAIS2005,
+  author = {Garrett, Simon},
+  year = {2005},
+  month = {02},
+  pages = {145-77},
+  title = {How Do We Evaluate Artificial Immune Systems?},
+  volume = {13},
+  journal = {Evolutionary computation},
+  doi = {10.1162/1063656054088512}
+}
 
-@article{scr2009,
-  title={The 2009 simulated car racing championship},
-  author={Loiacono, Daniele and Lanzi, Pier Luca and Togelius, Julian and Onieva, Enrique and Pelta, David A and Butz, Martin V and L{\"o}nneker, Thies D and Cardamone, Luigi and Perez, Diego and S{\'a}ez, Yago and others},
-  journal={Computational Intelligence and AI in Games, IEEE Transactions on},
-  volume={2},
-  number={2},
-  pages={131--147},
-  year={2010},
-  publisher={IEEE}
-},
+@inproceedings{ImmuneSysAdapML1986,
+  author = {Farmer, J.Doyne and Packard, Norman and Perelson, Alan},
+  year = {1986},
+  month = {10},
+  pages = {},
+  title = {The Immune System, Adaptation, and Machine Learning},
+  volume = {22},
+  journal = {Physica D: Nonlinear Phenomena},
+  doi = {10.1016/0167-2789(86)90240-X}
+}
 
-@misc{pinteric_latex_2004,
-  title = {{LaTeX} on {Windows}},
-  url = {http://www.pinteric.com/miktex.html},
-  urldate = {2015-06-11},
-  author = {Pinteric, Marko},
-  file = {LaTeX on Windows:/home/gnramos/Dropbox/documents/config/zotero/storage/H4KEHQA5/miktex.html:text/html}
-},
+@unknown{AdaptiveImmunitySAS2021,
+  author = {Naqvi, Syed Moeen and Astekin, Merve and Malik, Sehrish and Moonen, Leon},
+  year = {2021},
+  month = {01},
+  pages = {},
+  title = {Adaptive Immunity for Software: Towards Autonomous Self-healing Systems}
+}
 
-@book{covey_first_1995,
-  title={First things first},
-  author={Covey, Stephen R and Merrill, A Roger and Merrill, Rebecca R},
-  year={1995},
-  publisher={Simon and Schuster}
-},
+@article{AISSOA2015,
+  author = {KamalMishra, Prashant and Bhusry, Mamta},
+  year = {2015},
+  month = {06},
+  pages = {25-32},
+  title = {Artificial Immune System: State of the Art Approach},
+  volume = {120},
+  journal = {International Journal of Computer Applications},
+  doi = {10.5120/21344-4357}
+}
 
-@misc{ppginf,
- author={PPGI/UnB},
- title={Regimento do Programa de P\'{o}s-gradua\c{c}\~{a}o em Inform\'{a}tica da Universidade de Bras\'{i}lia},
- howpublished={http://ppgi.unb.br/normatives},
- year={2013}
+@article{NSAResearch2021,
+  author = {Gupta, Kishor Datta and Dasgupta, Dipankar},
+  year = {2021},
+  month = {09},
+  pages = {1-1},
+  title = {Negative Selection Algorithm Research and Applications in the Last Decade: A Review},
+  volume = {PP},
+  journal = {IEEE Transactions on Artificial Intelligence},
+  doi = {10.1109/TAI.2021.3114661}
+}
+
+@book{Kuby2019,
+  author = {Punt, Jenni and Stranford, Sharon A. and Jones, Patricia P. and Owen, Judith A. and },
+  year = {2019},
+  edition = {Eighth edition},
+  publisher = {W. H. Freeman Macmillan Learning},
+  address = {New York}
 }
