Finished AIS background

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -78,3 +78,71 @@
   publisher = {W. H. Freeman Macmillan Learning},
   address = {New York}
 }
+
+@article{Forrest1994,
+  author = {Forrest, Stephanie and Perelson, Alan and Allen, Lawrence and Cherukuri, Rajesh},
+  year = {1995},
+  month = {11},
+  pages = {},
+  title = {Self-Nonself Discrimination in a Computer},
+  journal = {Proceedings of the International Symposium on Security and Privacy},
+  doi = {10.1109/RISP.1994.296580}
+}
+
+@article{NSADetectorGen2002,
+  author = {Ayara, M. and Timmis, Jon and Lemos, R. and De Castro, Leandro and Duncan, R.},
+  year = {2002},
+  month = {01},
+  pages = {},
+  title = {Negative selection: How to generate detectors},
+  journal = {Proceedings of the 1st International Conference on Artificial Immune Systems (ICARIS)}
+}
+
+@inproceedings{LinearNSA1996,
+  author = {D'haeseleer, Patrik},
+  year = {1996},
+  month = {07},
+  pages = {18-26},
+  title = {An Immunological Approach to Change Detection: Theoretical Results},
+  isbn = {0-8186-7522-5},
+  doi = {10.1109/CSFW.1996.503687}
+}
+
+@article{RevisitingNSA2007,
+  author = {Ji, Zhou and Dasgupta, Dipankar},
+  year = {2007},
+  month = {02},
+  pages = {223-51},
+  title = {Revisiting Negative Selection Algorithms},
+  volume = {15},
+  journal = {Evolutionary computation},
+  doi = {10.1162/evco.2007.15.2.223}
+}
+
+@inproceedings{NSADetGen1996,
+  author = {D'haeseleer, Patrik and Forrest, Stephanie and Helman, Paul},
+  year = {1996},
+  month = {05},
+  pages = {110-119},
+  title = {An immunological approach to change detection: algorithms, analysis and implications}
+}
+
+@inproceedings{HybridNSA2012,
+  author = {Chmielewski, Andrzej and Wierzchon, Slawomir},
+  year = {2012},
+  month = {09},
+  pages = {},
+  title = {Hybrid Negative Selection Approach for Anomaly Detection},
+  isbn = {978-3-642-33259-3},
+  doi = {10.1007/978-3-642-33260-9_21}
+}
+
+@inproceedings{EffectBinaryRule2003,
+  author = {González, Fabio and Dasgupta, Dipankar and Gomez, Jonatan},
+  year = {2003},
+  month = {07},
+  pages = {195-206},
+  title = {The Effect of Binary Matching Rules in Negative Selection},
+  volume = {2723},
+  doi = {10.1007/3-540-45105-6_25}
+}
